Minor change to skills

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <body>
       <b-header></b-header>
+      <div class="starter"></div>
       <div class="contain">
         <banner src="" alt="" desc=""></banner>
         <div class="is-divider" data-content="OR"></div>
