Playing with layout of about page

--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
 
   <body>
       <b-header></b-header>
-      <div class="starter"></div>
+      <div class="starter">
+        <div>
+          <h2>Ebony Brown</h2>
+          <h4> Backend and FullStack Developer<br> Artist and Writer</h4>
+          <banner src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg/1200px-Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg" alt="xxx" desc="Let's test this"></banner>
+
+        </div>
+      </div>
       <div class="contain">
-        <banner src="" alt="" desc=""></banner>
         <div class="is-divider" data-content="OR"></div>
-        <h3>About Me</h3>
-        <p>Ebony is a comic creator and illustrator who recently started their journey to become a full stack web developer. She went to the School of Visual Arts for Cartooning and graduated from the General Assembly SEI bootcamp.<br><br> Her journey started with an interest in creating games in Unity but branched out as time passed. She's looking into innovating my own web comics by adding interactivity using Javascript and other languages. <br><br> She is available for backend and full stack positions</p>
+        <h3 class="center">About Me</h3>
+        <div>
+          <p>Ebony is a comic creator and illustrator who recently started their journey to become a full stack web developer. She went to the School of Visual Arts for Cartooning and graduated from the General Assembly SEI bootcamp.<br><br> Her journey started with an interest in creating games in Unity but branched out as time passed. She's looking into innovating my own web comics by adding interactivity using Javascript and other languages. She is available for backend and full stack positions</p>
+        </div>
         <h3 class="center">Skills</h3>
         <div class="skills">
           
