--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div>
           <h2>Ebony Brown</h2>
           <h4> Backend and FullStack Developer<br> Artist and Writer</h4>
-          <banner src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg/1200px-Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg" alt="xxx" desc="Let's test this"></banner>
+          <c-banner src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg/1200px-Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg" alt="xxx" desc="Let's test this"></c-banner>
 
         </div>
       </div>
