Made divs in header, adjusted margins

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
   <body>
       <b-header></b-header>
       <div class="starter">
-        <div>
-          <h2>Ebony Brown</h2>
-          <h4> Backend and FullStack Developer<br> Artist and Writer</h4>
-          <c-banner src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg/1200px-Monasterio_Khor_Virap%2C_Armenia%2C_2016-10-01%2C_DD_25.jpg" alt="xxx" desc="Let's test this"></c-banner>
-
+        <div id='banner'>
+          <div>
+            <h2>Ebony Brown</h2>
+            <h4> Backend/FullStack Developer<br> Artist and Writer</h4>
+          </div>
+          <img src="https://drive.google.com/file/d/1-FdbiyWvGi-NfZXS04UjBWZhCG4Nv0mH/view?usp=sharing" class="top-img"></div>
         </div>
       </div>
       <div class="contain">
@@ -77,7 +78,7 @@
         <input type="text" placeholder="Not required" class="phone">
         <p>Message</p>
         <textarea name="comment" class="message" placeholder="Message here" required></textarea>
-        <button class="submit">Send</button>
+        <button type="button" class="submit btn-success btn">Send</button>
     </div>
     <footer>
        <div class="one">
