Mvp for portfolio met

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <h2>Ebony Brown</h2>
             <h4> Backend/FullStack Developer<br> Artist and Writer</h4>
           </div>
-          <img src="https://drive.google.com/file/d/1-FdbiyWvGi-NfZXS04UjBWZhCG4Nv0mH/view?usp=sharing" class="top-img"></div>
         </div>
       </div>
       <div class="contain">
@@ -67,7 +66,7 @@
       </div>
       <div class="contact" id="contact">
        
-        <h2>I'd Love to hear from you!</h2> 
+        <h2 class="center">I'd love to hear from you</h2> 
         
         <div class="lines"></div>    
         <p>Name</p>
@@ -82,7 +81,7 @@
     </div>
     <footer>
        <div class="one">
-            <h3>Other ways to get in touch!</h3>
+            <h3>Other ways to get in touch:</h3>
             <a href="https://www.linkedin.com/in/ebony-brown-884b331ab/">
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
             </a>
@@ -92,8 +91,8 @@
             </a>
        </div>
        <div class="two">
-            <h3> Interested in seeing my art</h3> 
-            <a href="https://www.instagram.com/bmearts/?hl=en">
+            <h3> Interested in seeing my art:</h3> 
+            <a href="https://www.instagram.com/ebsonari/?hl=en">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
        </div>
